Overflow/scroll fix for cocktail.ui.Table

--- a/cocktail/ui/resources/styles/cocktail-ui-table.scss
+++ b/cocktail/ui/resources/styles/cocktail-ui-table.scss
@@ -67,6 +67,7 @@ $cell-padding: 0.6em;
     flex-direction: column;
     align-items: stretch;
     border: 1px solid #ddd;
+    overflow: hidden;
 }
 
 #headers {
